# cloud-products

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_freeze.txt  setup.py
.github/workflows/: build.yml  ci.yml
cloud_products/: scraper.py
cloud_products/cloud_products/: aws.py  base.py  browser.py  product.py
cloud_products/crawler/: aws.py  base.py  product.py
docs/: RELEASE.md  TODO.md
sample_data/aws_products/: aws.amazon.com_alexaforbusiness__content.txt  aws.amazon.com_alexaforbusiness_faqs__faqs.txt  aws.amazon.com_amazon-mq__content.txt  aws.amazon.com_amazon-mq_faqs__faqs.txt  aws.amazon.com_amplify__content.txt  aws.amazon.com_amplify_faqs__faqs.txt  aws.amazon.com_api-gateway__content.txt  aws.amazon.com_api-gateway_faqs__faqs.txt  aws.amazon.com_app-mesh__content.txt  aws.amazon.com_app-mesh_faqs__faqs.txt  aws.amazon.com_app2container__content.txt  aws.amazon.com_app2container_faqs__faqs.txt  aws.amazon.com_appflow__content.txt  aws.amazon.com_appflow_faqs__faqs.txt  aws.amazon.com_application-discovery__content.txt  aws.amazon.com_application-discovery_faqs__faqs.txt  aws.amazon.com_apprunner__content.txt  aws.amazon.com_apprunner_faqs__faqs.txt  aws.amazon.com_appstream2__content.txt  aws.amazon.com_appstream2_faqs__faqs.txt  aws.amazon.com_appsync__content.txt  aws.amazon.com_appsync_faqs__faqs.txt  aws.amazon.com_artifact__content.txt  aws.amazon.com_artifact_faq__faqs.txt  aws.amazon.com_athena__content.txt  (+427 more)
tests/: test_aws.py
